flapivor/tests/m3/hopix/typechecker/bad/58-reference.hopix
val r : Ref<Int> = ref "Wrong"